# self-org-maps

./: .dockerignore  .env.docker.prod  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  animate.py  blend.py  blueprint_domain.py  constants.py  docker-compose.yaml  graphics.py  main.py  makefile  models.py  pyproject.toml  req.txt  requirements.txt  som.py  som_iris.py  som_math.py  tasks.py
assets/: ex1-trained.tiff  ex2-trained.tiff
blueprints/: default.json  ramsviklandet.json
quickstart/: curl.sh  request.json
som/: app.py  constants.py  main.py  pixelate.py  routing.py  tasks.py
som/api/: fastapi.py  routing.py
som/api/config/: settings.py
som/api/views/: models.py  som.py
som/common/: models.py
som/domains/: blueprint.py  models.py  processor.py  transloadit.py
som/domains/som/: som.py
som/tooling/: entropy.py  resize.py
som/views/: som.py
som/worker/: celery.py
som/worker/config/: settings.py
som/worker/domains/: graphics.py  mail.py  processor.py
som/worker/domains/som/: som.py  som_math.py
src/project_util/: constants.py  image_utils.py
src/project_util/artefact/: artefact.py
src/project_util/blueprint/: blueprint.py  processor.py
src/project_util/naming/: naming.py
src/project_util/project/: models.py  project.py
src/project_util/services/: s3.py
src/som/api/: fastapi.py  main.py  routing.py
src/som/api/views/: cli.py  som.py
src/som/common/: models.py
src/som/tooling/: resize.py
src/som/worker/: celery.py
src/som/worker/config/: settings.py
src/som/worker/domains/: graphics.py  (+1 more)
(+2 files in other folders)
